--- a/App_CalcDataSize.ipynb
+++ b/App_CalcDataSize.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbuMBHJyenWDympAVVXLqS",
+      "authorship_tag": "ABX9TyNePKFcsSk3gl5l2Q1AxO9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/s-sasaki-gunma/MaterialApp/blob/main/calcDataSize.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/s-sasaki-gunma/MaterialApp/blob/main/App_CalcDataSize.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -68,8 +68,8 @@
         "    print(\"模範解答：\",2**y,\"（式：2 の\",y,\"乗）\")"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "282UpXEipRTV"
+        "id": "282UpXEipRTV",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -297,10 +297,10 @@
         "time2 = list_time[random.randint(0,2)]\n",
         "time3=60**list_time.index(time2)\n",
         "list_channel = [\"モノラル\",\"ステレオ\"]\n",
-        "ch1 = random.randint(1,2)\n",
-        "ch2 = list_channel[random.randint(0,1)]\n",
-        "print(\"問：１秒間に\",hz,\"回の標本化を行い\",bit,\"bitで量子化した\",time1,time2,\"の\",ch2,\"音声のデータ量[bit]を求めよ。\")\n",
-        "ans = hz*bit*time1*time3*ch1\n",
+        "ch1 = list_channel[random.randint(0,1)]\n",
+        "ch2 = list_channel.index(ch1)+1\n",
+        "print(\"問：１秒間に\",hz,\"回の標本化を行い\",bit,\"bitで量子化した\",time1,time2,\"の\",ch1,\"音声のデータ量[bit]を求めよ。\")\n",
+        "ans = hz*bit*time1*time3*ch2\n",
         "x = input(\"解答欄：\")\n",
         "if x == str(ans):\n",
         "    print(\"正解！\")\n",
@@ -310,9 +310,9 @@
         "    res = rf\"\"\"\n",
         "    \\begin{{aligned}}\n",
         "    {time1} [ {time2} ] &= {time1*time3} [秒] \\\\\n",
-        "    {ch2} 音声 &= {ch1} チャンネル \\\\\n",
+        "    {ch1} 音声 &= {ch2} チャンネル \\\\\n",
         "    故に\\\\\n",
-        "    データ量 [bit] &= {hz} [Hz] \\times {bit} [bit] \\times {time1*time3} [秒] \\times {ch1} チャンネル\n",
+        "    データ量 [bit] &= {hz} [Hz] \\times {bit} [bit] \\times {time1*time3} [秒] \\times {ch2} チャンネル\n",
         "    &= {ans} [bit]\n",
         "    \\end{{aligned}}\n",
         "    \"\"\"\n",
@@ -386,8 +386,8 @@
         "    display(Markdown(res))"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "i24NaW4ciLnu"
+        "id": "i24NaW4ciLnu",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -458,8 +458,8 @@
         "    display(Markdown(res))"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "xb5UexY0cUho"
+        "id": "xb5UexY0cUho",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -504,8 +504,8 @@
         "    display(Markdown(res))"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "b-0dg_k9htPM"
+        "id": "b-0dg_k9htPM",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
